# dppo

./: .gitignore  LICENSE  README.md  pyproject.toml
agent/dataset/: buffer.py  sequence.py  sequence_BACKUP_1895602.py  sequence_BASE_1895602.py  sequence_REMOTE_1895602.py
agent/eval/: eval_agent.py  eval_diffusion_agent.py  eval_diffusion_img_agent.py  eval_gaussian_agent.py  eval_gaussian_img_agent.py
agent/finetune/: train_agent.py  train_awr_diffusion_agent.py  train_calql_agent.py  train_dipo_diffusion_agent.py  train_dql_diffusion_agent.py  train_ibrl_agent.py  train_idql_diffusion_agent.py  train_ppo_agent.py  train_ppo_diffusion_agent.py  train_ppo_diffusion_img_agent.py  train_ppo_exact_diffusion_agent.py  train_ppo_gaussian_agent.py  train_ppo_gaussian_img_agent.py  train_qsm_diffusion_agent.py  train_rlpd_agent.py  train_rwr_diffusion_agent.py  train_sac_agent.py
agent/pretrain/: train_agent.py  train_diffusion_agent.py  train_gaussian_agent.py
cfg/: finetuning.md  pretraining.md
env/: plot_traj.py
env/gym_utils/: __init__.py  async_vector_env.py  furniture_normalizer.py  sync_vector_env.py  vector_env.py
installation/: install_d3il.md  install_furniture.md  install_mujoco.md
model/common/: critic.py  gaussian.py  gmm.py  mlp.py  mlp_gaussian.py  mlp_gmm.py  modules.py  transformer.py  vit.py
model/diffusion/: diffusion.py  diffusion_awr.py  diffusion_dipo.py  diffusion_dql.py  diffusion_idql.py  (+12 more)
script/: download_url.py  run.py  set_path.sh  test_d3il_render.py  test_robomimic_render.py
util/: network.py  reward_scaling.py  scheduler.py  timer.py
(+276 files in other folders)
